--- a/assets/css/_sass/variables.scss
+++ b/assets/css/_sass/variables.scss
@@ -7,8 +7,8 @@ $base-line-height: 1.7;
 $spacing-unit:     30px;
 $light-gray: gray;
 $text-color:       #333;
-$background-color: #fdfdfd;
-$brand-color:      #60c17d;
+$background-color: #f3f3f3;
+$brand-color:      #005f86;
 
 // Color scheme for light
 $body-bg: #fdfdfd;
