--- a/assets/css/_sass/variables.scss
+++ b/assets/css/_sass/variables.scss
@@ -11,7 +11,7 @@ $background-color: #f3f3f3;
 $brand-color:      #005f86;
 
 // Color scheme for light
-$body-bg: #fdfdfd;
+$body-bg: #f3f3f3;
 $projectbox: #cfe6a4;
 $text-color: #333;
 
