--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <div class="links scroll">
-        <a href="{{site.baseurl}}/">Home</a>
+        <a href="{{site.baseurl}}/">Inicio</a>
         <a href="{{site.baseurl}}/projects/">Proyectos</a>
         <a href="{{site.baseurl}}/blog/">Blog</a>
         <a href="{{site.baseurl}}/archive/">Archive</a>
