--- a/_includes/social-footer.html
+++ b/_includes/social-footer.html
@@ -62,12 +62,12 @@ target="_blank">
 </a>
 {%- endif -%}
 
-{%- if site.quora -%}
-<a title="{{ _locale_string_follow | replace: '[NAME]', 'Quora' }}"
-class="social-button quora" itemprop="sameAs"
-href="https://www.quora.com/profile/{{ site.quora }}"
+{%- if site.tiktok -%}
+<a title="{{ _locale_string_follow | replace: '[NAME]', 'TikTok' }}"
+class="social-button tiktok" itemprop="sameAs"
+href="https://tiktok.com/@heliouz_{{ site.tiktok }}"
 target="_blank">
-<i class="fab fa-quora"></i>
+<i class="fab fa-tiktok"></i>
 </a>
 {%- endif -%}
 
