--- a/assets/css/_sass/variables.scss
+++ b/assets/css/_sass/variables.scss
@@ -12,8 +12,8 @@ $brand-color:      #005f86;
 
 // Color scheme for light
 $body-bg: #f3f3f3;
-$projectbox: #cfe6a4;
-$text-color: #333;
+$projectbox: #005f86;
+$text-color: #f3f3f3;
 
 // Color scheme for dark modes
 $body-bg-dark: #061725;
