--- a/assets/css/_sass/footer-social.scss
+++ b/assets/css/_sass/footer-social.scss
@@ -37,7 +37,7 @@
 .fa-orcid,
 .fa-researchgate,
 .fa-envelope
-.fa-quora
+.fa-tiktok
 .fa-instagram
 .fa-stack-overflow {
   font-size: 25px;
@@ -113,11 +113,11 @@
   border-color: #5dd1b0;
 }
 
-.rounded-social-buttons .social-button.quora {
+.rounded-social-buttons .social-button.tiktok {
   background: #a82400;
 }
 
-.rounded-social-buttons .social-button.quora:hover, .rounded-social-buttons .social-button.quora:focus {
+.rounded-social-buttons .social-button.tiktok:hover, .rounded-social-buttons .social-button.tiktok:focus {
   color: #a82400;
   background: #fefefe;
   border-color: #5dd1b0;
