--- a/assets/css/_sass/variables.scss
+++ b/assets/css/_sass/variables.scss
@@ -13,7 +13,7 @@ $brand-color:      #005f86;
 // Color scheme for light
 $body-bg: #f3f3f3;
 $projectbox: #005f86;
-$text-color: #f3f3f3;
+$text-color: #333;
 
 // Color scheme for dark modes
 $body-bg-dark: #061725;
