--- a/assets/css/_sass/footer-social.scss
+++ b/assets/css/_sass/footer-social.scss
@@ -118,9 +118,9 @@
 }
 
 .rounded-social-buttons .social-button.tiktok:hover, .rounded-social-buttons .social-button.tiktok:focus {
-  color: #a82400;
+  color: #000000;
   background: #fefefe;
-  border-color: #5dd1b0;
+  border-color: #ffffff;
 }
 
 .rounded-social-buttons .social-button.instagram {
