--- a/assets/css/_sass/footer-social.scss
+++ b/assets/css/_sass/footer-social.scss
@@ -114,7 +114,7 @@
 }
 
 .rounded-social-buttons .social-button.tiktok {
-  background: #a82400;
+  background: #000000;
 }
 
 .rounded-social-buttons .social-button.tiktok:hover, .rounded-social-buttons .social-button.tiktok:focus {
