--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
         <meta content="width=device-width, initial-scale=1" name="viewport">
         <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
 
-        <h1 class="post-headline">{{site.title}}</h1>
-        <h3 class="post-description">{{site.description}}</h3>
+        <h1 class="post-headline", style="color: #0D3251;">{{site.title}}</h1>
+        <h3 class="post-description", style="color: #0D3251;">{{site.description}}</h3>
         <hr>
         {% include navigation.html %}
 
