--- a/assets/css/_sass/projects.scss
+++ b/assets/css/_sass/projects.scss
@@ -17,9 +17,9 @@
   flex: 1 0 200px;
   border-radius: 15px;
   background: $projectbox;
-  @media (prefers-color-scheme: dark) {
+  /*@media (prefers-color-scheme: dark) {
     background: $projectbox-dark;
-  }
+  }*/
   height: 200px;
   width: 100%;
   overflow: hidden;
