--- a/assets/css/_sass/projects.scss
+++ b/assets/css/_sass/projects.scss
@@ -31,7 +31,7 @@
   vertical-align: middle;
   text-align: center;
   cursor: pointer;
-  color: #FFFFFF;
+  color: "#FFFFFF";
 }
 
 .projectTile a span {
