--- a/assets/css/_sass/projects.scss
+++ b/assets/css/_sass/projects.scss
@@ -31,7 +31,6 @@
   vertical-align: middle;
   text-align: center;
   cursor: pointer;
-  color: "#FFFFFF";
 }
 
 .projectTile a span {
@@ -46,6 +45,7 @@
 .projectTile a span h2 {
   font-size: 1.5rem;
   padding: 1rem;
+  color: "#FFFFFF"
 }
 
 .projectTile:hover a span h2 {
