--- a/assets/css/_sass/projects.scss
+++ b/assets/css/_sass/projects.scss
@@ -45,7 +45,7 @@
 .projectTile a span h2 {
   font-size: 1.5rem;
   padding: 1rem;
-  color: "#FFFFFF"
+  color: #FFFFFF;
 }
 
 .projectTile:hover a span h2 {
