--- a/assets/css/_sass/projects.scss
+++ b/assets/css/_sass/projects.scss
@@ -60,7 +60,7 @@
   font-size: 1.2rem;
   display: flex;
   padding: 1rem;
-  color: #F3F3F3;
+  color: #FFFFFF;
 /*
   @media (prefers-color-scheme: dark) {
     color: $text-color-dark;
