--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,5 +2,5 @@
         <a href="{{site.baseurl}}/">Inicio</a>
         <a href="{{site.baseurl}}/projects/">Proyectos</a>
         <a href="{{site.baseurl}}/blog/">Blog</a>
-        <a href="{{site.baseurl}}/archive/">Archive</a>
+        <a href="{{site.baseurl}}/contacto/">Contacto</a>
 </div>
