--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,10 @@
         <footer>
             <hr>
             {% include social-footer.html %}
+            <p class="copy">
+            <small> &copy; {{site.title}} {{ site.time | date: '%Y' }}                  
+            </small>
+
           <!--<p class="copy">
             <small> &copy; {{site.title}} {{ site.time | date: '%Y' }}
                     | Powered by Jekyll and
