--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,17 +35,9 @@
             <hr>
             {% include social-footer.html %}
             <p class="copy">
-            <small> &copy; {{site.title}} {{ site.time | date: '%Y' }}                  
+            <small>
+                &copy; {{site.title}} {{ site.time | date: '%Y' }}                  
             </small>
-
-          <!--<p class="copy">
-            <small> &copy; {{site.title}} {{ site.time | date: '%Y' }}
-                    | Powered by Jekyll and
-                    <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on {{ site.time | date_to_long_string }}
-            </small>
-          </p>-->
-
         </footer>
 
         {% include analytics.html %}
