--- a/assets/css/_sass/footer-social.scss
+++ b/assets/css/_sass/footer-social.scss
@@ -120,7 +120,7 @@
 .rounded-social-buttons .social-button.tiktok:hover, .rounded-social-buttons .social-button.tiktok:focus {
   color: #000000;
   background: #fefefe;
-  border-color: #ffffff;
+  border-color: #000000;
 }
 
 .rounded-social-buttons .social-button.instagram {
