--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
 <div class="links scroll">
         <a href="{{site.baseurl}}/">Inicio</a>
         <a href="{{site.baseurl}}/projects/">Proyectos</a>
-        <a href="{{site.baseurl}}/blog/">Blog</a>
+        <a href="{{site.baseurl}}/pubs/">Publicaciones</a>
         <a href="{{site.baseurl}}/contacto/">Contacto</a>
 </div>
