--- a/assets/css/_sass/footer-social.scss
+++ b/assets/css/_sass/footer-social.scss
@@ -83,14 +83,14 @@
   border-color: #000000;
 }
 
-.rounded-social-buttons .social-button.email {
-  background: #60c17d;
+.rounded-social-buttons .social-button.{
+  background: #0D3251;
 }
 
 .rounded-social-buttons .social-button.email:hover, .rounded-social-buttons .social-button.email:focus {
-  color: #60c17d;
+  color: #0D3251;
   background: #fefefe;
-  border-color: #000000;
+  border-color: #123;
 }
 
 .rounded-social-buttons .social-button.orcid {
