--- a/assets/css/_sass/footer-social.scss
+++ b/assets/css/_sass/footer-social.scss
@@ -83,7 +83,7 @@
   border-color: #000000;
 }
 
-.rounded-social-buttons .social-button.{
+.rounded-social-buttons .social-button.email {
   background: #0D3251;
 }
 
