--- a/assets/css/_sass/footer-social.scss
+++ b/assets/css/_sass/footer-social.scss
@@ -84,11 +84,11 @@
 }
 
 .rounded-social-buttons .social-button.email {
-  background: #0D3251;
+  background: #0083B9;
 }
 
 .rounded-social-buttons .social-button.email:hover, .rounded-social-buttons .social-button.email:focus {
-  color: #0D3251;
+  color: #0083B9;
   background: #fefefe;
   border-color: #112233;
 }
