--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,6 +1,16 @@
-<!-- Google Analytics Tracking code -->
+<!-- Google Analytics Tracking code 
 <script src="https://cdn.jsdelivr.net/npm/ga-lite@2.1.6/dist/ga-lite.min.js" async></script>
 <script>
 galite('create', 'UA-XXXXXXXX-X', 'auto')
 galite('send', 'pageview')
+</script>
+-->
+<script>
+(function(e,t,n,i,s,a,c){e[n]=e[n]||function(){(e[n].q=e[n].q||[]).push(arguments)}
+;a=t.createElement(i);c=t.getElementsByTagName(i)[0];a.async=true;a.src=s
+;c.parentNode.insertBefore(a,c)
+})(window,document,"galite","script","https://cdn.jsdelivr.net/npm/ga-lite@2/dist/ga-lite.min.js");
+
+galite('create', 'G-LQ04J6KFPR', 'auto');
+galite('send', 'pageview');
 </script>
