--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <!--<h3 class="post-headline">{{page.title}}</h3>-->
-<p class="meta"><small>{{page.date | date: '%B %d, %Y'}}</small></p>
+<!--<p class="meta"><small>{{page.date | date: '%B %d, %Y'}}</small></p>-->
 
 {{content}}
 
