--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<hr style="height:1px; visibility:hidden;" />
 <!--<h3 class="post-headline">{{page.title}}</h3>-->
 <!--<p class="meta"><small>{{page.date | date: '%B %d, %Y'}}</small></p>-->
 
